# Open-LLM-VTuber

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MODEL_CONFIGS.md  README.CN.md  README.KR.md  README.md  ReadMe_local.md  broadcast_dm.py  build_docker.sub  conf.CN.yaml  conf.yaml  conf.yaml.zh.backup  deploy.sh  docker-compose.yaml  docker-compose.yml  dockerfile  faqs.json  grimm_crawler.py  main.py  model_dict.json  pyproject.toml  requirements.txt  run_server.py  start.sh  test.py  text_cleaner.py  upgrade.py  yaml_differences.txt  yaml_differences_zh.txt
.gemini/: styleguide.md
.github/: copilot-instructions.md
asr/: asr_interface.py  asr_with_vad.py
characters/: README.md  cohost_vtuber.yaml  rtx5090-balanced.yaml  rtx5090-performance.yaml  zh_米粒.yaml
config_templates/: conf.ZH.default.yaml  conf.default.yaml
dockerfiles/: README_DOCKER.md  README_DOCKER_CN.md  README_DOCKER_EN.md  change_default_conf_to_docker.py  docker-compose.cpu.yml  docker-compose.yml  dockerfile  dockerfile.cpu  dockerfile.gpu  server_config_cn.sh  server_config_en.sh
docs/: specifications.md
i18n/: test.json
melo/: api.py
persona/: cohost_vtuber.yaml
prompts/: prompt_loader.py
runpod/: DEPLOYMENT.md  INDEX.md  README.md  SECURITY.md  conf.yaml  sync.sh  template.json
soulmate-vtuber-backend/: Dockerfile  pyproject.toml
soulmate-vtuber-backend/app/api/v1/: chat.py
soulmate-vtuber-backend/app/core/: config.py
soulmate-vtuber-backend/app/services/: gemini_client.py
soulmate-vtuber-backend/tests/: test_gemini_client.py
(+95 files in other folders)
